[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/Arcade/Scripts/Singleton_HUD-Arcade.gd" type="Script" id=1]
[ext_resource path="res://Menus/Arcade/Parts/HUD_Player_00.tscn" type="PackedScene" id=2]

[node name="HUD-Arcade" type="HBoxContainer"]
margin_left = 1.67041
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blank_09" type="Label" parent="."]
margin_top = 727.0
margin_right = 6.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_07" parent="." instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 0.0
margin_right = 235.0
margin_bottom = 1469.0
player_num = 7

[node name="Blank_07" type="Label" parent="."]
margin_left = 239.0
margin_top = 727.0
margin_right = 245.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_05" parent="." instance=ExtResource( 2 )]
margin_left = 249.0
margin_top = 0.0
margin_right = 474.0
margin_bottom = 1469.0
player_num = 5

[node name="Blank_05" type="Label" parent="."]
margin_left = 478.0
margin_top = 727.0
margin_right = 484.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_03" parent="." instance=ExtResource( 2 )]
margin_left = 488.0
margin_top = 0.0
margin_right = 713.0
margin_bottom = 1469.0
player_num = 3

[node name="Blank_03" type="Label" parent="."]
margin_left = 717.0
margin_top = 727.0
margin_right = 723.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_01" parent="." instance=ExtResource( 2 )]
margin_left = 727.0
margin_top = 0.0
margin_right = 952.0
margin_bottom = 1469.0
player_num = 1

[node name="Blank_01" type="Label" parent="."]
margin_left = 956.0
margin_top = 727.0
margin_right = 962.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_02" parent="." instance=ExtResource( 2 )]
margin_left = 966.0
margin_top = 0.0
margin_right = 1191.0
margin_bottom = 1469.0
player_num = 2

[node name="Blank_02" type="Label" parent="."]
margin_left = 1195.0
margin_top = 727.0
margin_right = 1201.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_04" parent="." instance=ExtResource( 2 )]
margin_left = 1205.0
margin_top = 0.0
margin_right = 1430.0
margin_bottom = 1469.0
player_num = 4

[node name="Blank_04" type="Label" parent="."]
margin_left = 1434.0
margin_top = 727.0
margin_right = 1440.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_06" parent="." instance=ExtResource( 2 )]
margin_left = 1444.0
margin_top = 0.0
margin_right = 1669.0
margin_bottom = 1469.0
player_num = 6

[node name="Blank_06" type="Label" parent="."]
margin_left = 1673.0
margin_top = 727.0
margin_right = 1679.0
margin_bottom = 741.0
size_flags_horizontal = 3

[node name="VBox_Player_08" parent="." instance=ExtResource( 2 )]
margin_left = 1683.0
margin_top = 0.0
margin_right = 1908.0
margin_bottom = 1469.0
player_num = 8

[node name="Blank_08" type="Label" parent="."]
margin_left = 1912.0
margin_top = 727.0
margin_right = 1918.0
margin_bottom = 741.0
size_flags_horizontal = 3
